--- a/scss/components/_editor.scss
+++ b/scss/components/_editor.scss
@@ -26,7 +26,7 @@ $editor-line-height: 1.3;
         color: colors.$text-editor;
         font-size: inherit;
         line-height: $editor-line-height;
-        white-space: pre-wrap;
+        white-space: pre;
         position: relative;
 
         // curssor immitator
