--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -26,7 +26,8 @@
 }
 
 .navbar-title-block {
-    width: 500px;
+    width: 50%;
+    max-width: 500px;
     height: 23px;
     display: flex;
     justify-content: center;
